--- a/ch2 Regression/7.softmax回归.ipynb
+++ b/ch2 Regression/7.softmax回归.ipynb
@@ -9,20 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/cs224n/lib/python3.10/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: 'dlopen(/opt/anaconda3/envs/cs224n/lib/python3.10/site-packages/torchvision/image.so, 0x0006): Symbol not found: __ZN3c106detail19maybe_wrap_dim_slowIxEET_S2_S2_b\n",
-      "  Referenced from: <9B280146-BBD7-3F77-9873-F9740F2A5329> /opt/anaconda3/envs/cs224n/lib/python3.10/site-packages/torchvision/image.so\n",
-      "  Expected in:     <F2FE5CF8-5B5B-3FAD-ADF8-C77D90F49FC9> /opt/anaconda3/envs/cs224n/lib/python3.10/site-packages/torch/lib/libc10.dylib'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
-      "  warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from IPython import display\n",
@@ -41,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "num_inputs = 784\n",
     "num_outputs = 10\n",
     "\n",
-    "W = torch.normal(0,0.01,size=(num_inputs,num_outputs),requires_grad=True)\n",
+    "W = torch.normal(0,0.01,size=(num_inputs,num_outputs),requires_grad=True) # 784行，10列（10个类别）\n",
     "b = torch.zeros(num_outputs,requires_grad=True)"
    ]
   },
@@ -61,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +61,7 @@
        "         [15.]]))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,19 +79,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$softmax(X)_{ij} = \\frac{exp(X_{ij})}{\\sum_k exp(X_{ik})}$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[0.0402, 0.2970, 0.1800, 0.2880, 0.1949],\n",
-       "         [0.2411, 0.2636, 0.1338, 0.2990, 0.0626]]),\n",
+       "(tensor([[0.1901, 0.0293, 0.1674, 0.1860, 0.4273],\n",
+       "         [0.1900, 0.2711, 0.2200, 0.1862, 0.1327]]),\n",
        " tensor([1., 1.]))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +107,7 @@
     "def softmax(X):\n",
     "    X_exp = torch.exp(X)\n",
     "    partition = X_exp.sum(1,keepdim=True)\n",
-    "    return X_exp / partition # 使用广播机制\n",
+    "    return X_exp / partition # 使用广播机制,实现了softmax\n",
     "X = torch.normal(0,1,(2,5))\n",
     "X_prob = softmax(X)\n",
     "X_prob,X_prob.sum(1)"
@@ -119,12 +115,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n对这里的X.reshape((-1,W.shape[0]))作理解：理解为-1由函数自己判断维度的大小是多少，而W.shape[0]则表示图片的向量维度\\n这一部分相当于给softmax输入的参数就是线性回归的回归值.\\n'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def net(X):\n",
-    "    return softmax(torch.matmul(X.reshape((-1,W.shape[0])),W)+b) # 括号内部就是线性回归"
+    "    return softmax(torch.matmul(X.reshape((-1,W.shape[0])),W)+b) # 括号内部就是线性回归\n",
+    "\"\"\"\n",
+    "对这里的X.reshape((-1,W.shape[0]))作理解：理解为-1由函数自己判断维度的大小是多少，而W.shape[0]则表示图片的向量维度\n",
+    "这一部分相当于给softmax输入的参数就是线性回归的回归值.\n",
+    "\"\"\""
    ]
   },
   {
@@ -136,16 +147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.1000, 0.5000])"
+       "' \\n这一段代码在做的事情是得到了预测值，根据真实值的标号到对应的预测结果中找出预测的概率.\\n'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +164,10 @@
    "source": [
     "y = torch.tensor([0,2])\n",
     "y_hat = torch.tensor([[0.1,0.3,0.6],[0.3,0.2,0.5]])\n",
-    "y_hat[[0,1],y] # 相当于【0，1】和【0，2】做笛卡尔积"
+    "y_hat[[0,1],y] # 相当于【0，1】和【0，2】做笛卡尔积\n",
+    "\"\"\" \n",
+    "这一段代码在做的事情是得到了预测值，根据真实值的标号到对应的预测结果中找出预测的概率.\n",
+    "\"\"\""
    ]
   },
   {
@@ -164,8 +178,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下面给出`交叉熵`的定义。\n",
+    "$$ H(p) = \\sum\\limits_i p(i)log(\\frac{1}{p(i)}) $$ "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -174,14 +196,14 @@
        "tensor([2.3026, 0.6931])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def cross_entropy(y_hat,y):\n",
-    "    return -torch.log(y_hat[range(len(y_hat)),y])\n",
+    "    return -torch.log(y_hat[range(len(y_hat)),y]) # 取出对应的预测概率作交叉熵\n",
     "\n",
     "cross_entropy(y_hat,y)"
    ]
@@ -195,16 +217,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1000, 0.3000, 0.6000],\n",
+      "        [0.3000, 0.2000, 0.5000]])\n",
+      "tensor([0, 2])\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0.5"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +248,10 @@
     "    cmp = y_hat.type(y.dtype) == y # 看看是否预测正确\n",
     "    return float(cmp.type(y.dtype).sum())\n",
     "\n",
-    "accuracy(y_hat,y) / len(y)"
+    "accuracy(y_hat,y) / len(y)\n",
+    "\"\"\" \n",
+    "accuracy函数的主要用法是，针对一个预测的y_hat向量和一个真实的y向量，判断预测的向量对应的最值位置是否和y向量（真实值）类别相同\n",
+    "\"\"\""
    ]
   },
   {
@@ -229,17 +263,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def evaluate_accuracy(net,data_iter):\n",
     "    '''计算在指定数据集上模型的精度。'''\n",
     "    if isinstance(net,torch.nn.Module):\n",
-    "        net.eval()  # 将模型设置为评估模式\n",
+    "        net.eval()  # 将模型设置为评估模式，在这种情况下模型的权不会改变\n",
     "    metric = Accumulator(2) # 正确预测数、预测总数（累加器）\n",
     "    for X,y in data_iter:\n",
     "        metric.add(accuracy(net(X),y),y.numel())\n",
+    "        \"\"\" \n",
+    "        这一部分在做的是：对于一个小批量的数据放入模型进行分析，分析的结果中预测正确的和预测的总数分别针对不同的数据进行累加。\n",
+    "        \"\"\"\n",
     "    return metric[0] / metric[1]"
    ]
   },
@@ -273,7 +310,7 @@
     {
      "data": {
       "text/plain": [
-       "0.1965"
+       "0.1453"
       ]
      },
      "execution_count": 16,
@@ -295,7 +332,7 @@
     "    def __getitem__(self,idx):\n",
     "        return self.data[idx]\n",
     "\n",
-    "evaluate_accuracy(net,test_iter)"
+    "evaluate_accuracy(net,test_iter) # 随机预测 百分之10正确率，10个类别"
    ]
   },
   {
@@ -313,21 +350,21 @@
    "source": [
     "def train_epoch_ch3(net,train_iter,loss,updater):\n",
     "    if isinstance(net,torch.nn.Module):\n",
-    "        net.train()\n",
-    "    metric = Accumulator(3)\n",
+    "        net.train() # 开启模型的训练模式，计算梯度\n",
+    "    metric = Accumulator(3) # 累加信息\n",
     "    for X,y in train_iter:\n",
-    "        y_hat = net(X)\n",
-    "        l = loss(y_hat,y)\n",
-    "        if isinstance(updater,torch.optim.Optimizer):\n",
-    "            updater.zero_grad()\n",
+    "        y_hat = net(X) # 预测值计算\n",
+    "        l = loss(y_hat,y) # 交叉熵损失函数\n",
+    "        if isinstance(updater,torch.optim.Optimizer): # 判断updater是否是一个pytorch优化器对象，不同的对象使用不同的方法\n",
+    "            updater.zero_grad() \n",
     "            l.backward()\n",
-    "            updater.step()\n",
-    "            metric.add(float(l) * len(y),accuracy(y_hat,y),y.size().numel())\n",
+    "            updater.step() # 参数更新\n",
+    "            metric.add(float(l) * len(y),accuracy(y_hat,y),y.size().numel()) # 样本分类数的增加\n",
     "        else:\n",
-    "            l.sum().backward()\n",
+    "            l.sum().backward() # 一维向量\n",
     "            updater(X.shape[0])\n",
-    "            metric.add(float(l.sum()),accuracy(y_hat,y),y.numel())\n",
-    "    return metric[0] /metric[2], metric[1] / metric[2]"
+    "            metric.add(float(l.sum()),accuracy(y_hat,y),y.numel()) # 记录分类的个数\n",
+    "    return metric[0] /metric[2], metric[1] / metric[2] # loss累加除以样本总数，所有正确样本数除以总数"
    ]
   },
   {
