--- a/ch6 Recurrent Neural Network/32.RNN.ipynb
+++ b/ch6 Recurrent Neural Network/32.RNN.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "         0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,15 +217,15 @@
     "    outputs = []\n",
     "    # X的形状：(批量大小，词表大小)\n",
     "    for X in inputs:\n",
-    "        H = torch.tanh(torch.mm(X, W_xh) + torch.mm(H, W_hh) + b_h) # 隐藏层的定义\n",
-    "        Y = torch.mm(H, W_hq) + b_q\n",
+    "        H = torch.tanh(torch.mm(X, W_xh) + torch.mm(H, W_hh) + b_h) # 隐藏层的定义 tanh作为激活函数\n",
+    "        Y = torch.mm(H, W_hq) + b_q # 当前时刻预测下一个词是谁\n",
     "        outputs.append(Y)\n",
-    "    return torch.cat(outputs, dim=0), (H,)"
+    "    return torch.cat(outputs, dim=0), (H,) # 输出，加上当前隐藏层 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "(torch.Size([10, 28]), 1, torch.Size([2, 512]))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,9 +293,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'time traveller qcznaqczna'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def predict_ch8(prefix, num_preds, net, vocab, device):  #@save\n",
     "    \"\"\"在prefix后面生成新字符\"\"\"\n",
@@ -308,7 +319,9 @@
     "    for _ in range(num_preds):  # 预测num_preds步\n",
     "        y, state = net(get_input(), state)\n",
     "        outputs.append(int(y.argmax(dim=1).reshape(1)))\n",
-    "    return ''.join([vocab.idx_to_token[i] for i in outputs])"
+    "    return ''.join([vocab.idx_to_token[i] for i in outputs])\n",
+    "\n",
+    "predict_ch8('time traveller ', 10, net, vocab, d2l.try_gpu())"
    ]
   },
   {
@@ -320,16 +333,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'time traveller se se se s'"
+       "'time traveller qcznaqczna'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
