--- a/ch7 Modern Recurrent Neural Network/37.双向循环神经网络.ipynb
+++ b/ch7 Modern Recurrent Neural Network/37.双向循环神经网络.ipynb
@@ -31,20 +31,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/cs224n/lib/python3.10/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: 'dlopen(/opt/anaconda3/envs/cs224n/lib/python3.10/site-packages/torchvision/image.so, 0x0006): Symbol not found: __ZN3c106detail19maybe_wrap_dim_slowIxEET_S2_S2_b\n",
-      "  Referenced from: <9B280146-BBD7-3F77-9873-F9740F2A5329> /opt/anaconda3/envs/cs224n/lib/python3.10/site-packages/torchvision/image.so\n",
-      "  Expected in:     <F2FE5CF8-5B5B-3FAD-ADF8-C77D90F49FC9> /opt/anaconda3/envs/cs224n/lib/python3.10/site-packages/torch/lib/libc10.dylib'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
-      "  warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time traveller                                                  \n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/wanghaojin/Desktop/University/3-1/Limu/ch7 Modern Recurrent Neural Network/37.双向循环神经网络.ipynb Cell 3\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/wanghaojin/Desktop/University/3-1/Limu/ch7%20Modern%20Recurrent%20Neural%20Network/37.%E5%8F%8C%E5%90%91%E5%BE%AA%E7%8E%AF%E7%A5%9E%E7%BB%8F%E7%BD%91%E7%BB%9C.ipynb#W0sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m# 训练模型\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/wanghaojin/Desktop/University/3-1/Limu/ch7%20Modern%20Recurrent%20Neural%20Network/37.%E5%8F%8C%E5%90%91%E5%BE%AA%E7%8E%AF%E7%A5%9E%E7%BB%8F%E7%BD%91%E7%BB%9C.ipynb#W0sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m num_epochs, lr \u001b[39m=\u001b[39m \u001b[39m500\u001b[39m, \u001b[39m1\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/wanghaojin/Desktop/University/3-1/Limu/ch7%20Modern%20Recurrent%20Neural%20Network/37.%E5%8F%8C%E5%90%91%E5%BE%AA%E7%8E%AF%E7%A5%9E%E7%BB%8F%E7%BD%91%E7%BB%9C.ipynb#W0sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m d2l\u001b[39m.\u001b[39;49mtrain_ch8(model, train_iter, vocab, lr, num_epochs, device)\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/cs224n/lib/python3.10/site-packages/d2l/torch.py:798\u001b[0m, in \u001b[0;36mtrain_ch8\u001b[0;34m(net, train_iter, vocab, lr, num_epochs, device, use_random_iter)\u001b[0m\n\u001b[1;32m    796\u001b[0m \u001b[39m# Train and predict\u001b[39;00m\n\u001b[1;32m    797\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(num_epochs):\n\u001b[0;32m--> 798\u001b[0m     ppl, speed \u001b[39m=\u001b[39m train_epoch_ch8(\n\u001b[1;32m    799\u001b[0m         net, train_iter, loss, updater, device, use_random_iter)\n\u001b[1;32m    800\u001b[0m     \u001b[39mif\u001b[39;00m (epoch \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m) \u001b[39m%\u001b[39m \u001b[39m10\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m    801\u001b[0m         \u001b[39mprint\u001b[39m(predict(\u001b[39m'\u001b[39m\u001b[39mtime traveller\u001b[39m\u001b[39m'\u001b[39m))\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/cs224n/lib/python3.10/site-packages/d2l/torch.py:767\u001b[0m, in \u001b[0;36mtrain_epoch_ch8\u001b[0;34m(net, train_iter, loss, updater, device, use_random_iter)\u001b[0m\n\u001b[1;32m    765\u001b[0m y \u001b[39m=\u001b[39m Y\u001b[39m.\u001b[39mT\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m    766\u001b[0m X, y \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mto(device), y\u001b[39m.\u001b[39mto(device)\n\u001b[0;32m--> 767\u001b[0m y_hat, state \u001b[39m=\u001b[39m net(X, state)\n\u001b[1;32m    768\u001b[0m l \u001b[39m=\u001b[39m loss(y_hat, y\u001b[39m.\u001b[39mlong())\u001b[39m.\u001b[39mmean()\n\u001b[1;32m    769\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(updater, torch\u001b[39m.\u001b[39moptim\u001b[39m.\u001b[39mOptimizer):\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/cs224n/lib/python3.10/site-packages/torch/nn/modules/module.py:1194\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1190\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1191\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1192\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1193\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1194\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1195\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1196\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/cs224n/lib/python3.10/site-packages/d2l/torch.py:828\u001b[0m, in \u001b[0;36mRNNModel.forward\u001b[0;34m(self, inputs, state)\u001b[0m\n\u001b[1;32m    826\u001b[0m X \u001b[39m=\u001b[39m F\u001b[39m.\u001b[39mone_hot(inputs\u001b[39m.\u001b[39mT\u001b[39m.\u001b[39mlong(), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mvocab_size)\n\u001b[1;32m    827\u001b[0m X \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mto(torch\u001b[39m.\u001b[39mfloat32)\n\u001b[0;32m--> 828\u001b[0m Y, state \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrnn(X, state)\n\u001b[1;32m    829\u001b[0m \u001b[39m# The fully connected layer will first change the shape of `Y` to\u001b[39;00m\n\u001b[1;32m    830\u001b[0m \u001b[39m# (`num_steps` * `batch_size`, `num_hiddens`). Its output shape is\u001b[39;00m\n\u001b[1;32m    831\u001b[0m \u001b[39m# (`num_steps` * `batch_size`, `vocab_size`).\u001b[39;00m\n\u001b[1;32m    832\u001b[0m output \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlinear(Y\u001b[39m.\u001b[39mreshape((\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, Y\u001b[39m.\u001b[39mshape[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m])))\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/cs224n/lib/python3.10/site-packages/torch/nn/modules/module.py:1194\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1190\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1191\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1192\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1193\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1194\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1195\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1196\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/cs224n/lib/python3.10/site-packages/torch/nn/modules/rnn.py:774\u001b[0m, in \u001b[0;36mLSTM.forward\u001b[0;34m(self, input, hx)\u001b[0m\n\u001b[1;32m    772\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcheck_forward_args(\u001b[39minput\u001b[39m, hx, batch_sizes)\n\u001b[1;32m    773\u001b[0m \u001b[39mif\u001b[39;00m batch_sizes \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 774\u001b[0m     result \u001b[39m=\u001b[39m _VF\u001b[39m.\u001b[39;49mlstm(\u001b[39minput\u001b[39;49m, hx, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_flat_weights, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbias, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mnum_layers,\n\u001b[1;32m    775\u001b[0m                       \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdropout, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtraining, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbidirectional, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbatch_first)\n\u001b[1;32m    776\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    777\u001b[0m     result \u001b[39m=\u001b[39m _VF\u001b[39m.\u001b[39mlstm(\u001b[39minput\u001b[39m, batch_sizes, hx, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_flat_weights, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbias,\n\u001b[1;32m    778\u001b[0m                       \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_layers, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdropout, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtraining, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbidirectional)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     },
     {
@@ -58,7 +58,7 @@
        "  <rdf:RDF xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:cc=\"http://creativecommons.org/ns#\" xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\n",
        "   <cc:Work>\n",
        "    <dc:type rdf:resource=\"http://purl.org/dc/dcmitype/StillImage\"/>\n",
-       "    <dc:date>2023-09-16T16:47:40.450154</dc:date>\n",
+       "    <dc:date>2023-09-16T16:47:55.106206</dc:date>\n",
        "    <dc:format>image/svg+xml</dc:format>\n",
        "    <dc:creator>\n",
        "     <cc:Agent>\n",
@@ -94,16 +94,16 @@
        "     <g id=\"line2d_1\">\n",
        "      <path d=\"M 86.015179 145.8 \n",
        "L 86.015179 7.2 \n",
-       "\" clip-path=\"url(#p71d0270b9b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pe6e87fd404)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_2\">\n",
        "      <defs>\n",
-       "       <path id=\"m2852cb3cba\" d=\"M 0 0 \n",
+       "       <path id=\"m3bb5f29464\" d=\"M 0 0 \n",
        "L 0 3.5 \n",
        "\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m2852cb3cba\" x=\"86.015179\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m3bb5f29464\" x=\"86.015179\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -156,11 +156,11 @@
        "     <g id=\"line2d_3\">\n",
        "      <path d=\"M 125.872321 145.8 \n",
        "L 125.872321 7.2 \n",
-       "\" clip-path=\"url(#p71d0270b9b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pe6e87fd404)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m2852cb3cba\" x=\"125.872321\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m3bb5f29464\" x=\"125.872321\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -202,11 +202,11 @@
        "     <g id=\"line2d_5\">\n",
        "      <path d=\"M 165.729464 145.8 \n",
        "L 165.729464 7.2 \n",
-       "\" clip-path=\"url(#p71d0270b9b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pe6e87fd404)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_6\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m2852cb3cba\" x=\"165.729464\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m3bb5f29464\" x=\"165.729464\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -256,11 +256,11 @@
        "     <g id=\"line2d_7\">\n",
        "      <path d=\"M 205.586607 145.8 \n",
        "L 205.586607 7.2 \n",
-       "\" clip-path=\"url(#p71d0270b9b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pe6e87fd404)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_8\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m2852cb3cba\" x=\"205.586607\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m3bb5f29464\" x=\"205.586607\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -297,11 +297,11 @@
        "     <g id=\"line2d_9\">\n",
        "      <path d=\"M 245.44375 145.8 \n",
        "L 245.44375 7.2 \n",
-       "\" clip-path=\"url(#p71d0270b9b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pe6e87fd404)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_10\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m2852cb3cba\" x=\"245.44375\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m3bb5f29464\" x=\"245.44375\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -470,16 +470,16 @@
        "     <g id=\"line2d_11\">\n",
        "      <path d=\"M 50.14375 142.058386 \n",
        "L 245.44375 142.058386 \n",
-       "\" clip-path=\"url(#p71d0270b9b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pe6e87fd404)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_12\">\n",
        "      <defs>\n",
-       "       <path id=\"m7a02add99b\" d=\"M 0 0 \n",
+       "       <path id=\"m5c4435aa9f\" d=\"M 0 0 \n",
        "L -3.5 0 \n",
        "\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m7a02add99b\" x=\"50.14375\" y=\"142.058386\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m5c4435aa9f\" x=\"50.14375\" y=\"142.058386\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_7\">\n",
@@ -535,11 +535,11 @@
        "     <g id=\"line2d_13\">\n",
        "      <path d=\"M 50.14375 105.863186 \n",
        "L 245.44375 105.863186 \n",
-       "\" clip-path=\"url(#p71d0270b9b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pe6e87fd404)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_14\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m7a02add99b\" x=\"50.14375\" y=\"105.863186\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m5c4435aa9f\" x=\"50.14375\" y=\"105.863186\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_8\">\n",
@@ -568,11 +568,11 @@
        "     <g id=\"line2d_15\">\n",
        "      <path d=\"M 50.14375 69.667986 \n",
        "L 245.44375 69.667986 \n",
-       "\" clip-path=\"url(#p71d0270b9b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pe6e87fd404)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_16\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m7a02add99b\" x=\"50.14375\" y=\"69.667986\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m5c4435aa9f\" x=\"50.14375\" y=\"69.667986\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_9\">\n",
@@ -589,11 +589,11 @@
        "     <g id=\"line2d_17\">\n",
        "      <path d=\"M 50.14375 33.472785 \n",
        "L 245.44375 33.472785 \n",
-       "\" clip-path=\"url(#p71d0270b9b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pe6e87fd404)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_18\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m7a02add99b\" x=\"50.14375\" y=\"33.472785\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m5c4435aa9f\" x=\"50.14375\" y=\"33.472785\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_10\">\n",
@@ -757,7 +757,7 @@
        "   </g>\n",
        "   <g id=\"line2d_19\">\n",
        "    <path d=\"M 50.14375 76.5 \n",
-       "\" clip-path=\"url(#p71d0270b9b)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#pe6e87fd404)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_3\">\n",
        "    <path d=\"M 50.14375 145.8 \n",
@@ -867,7 +867,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"p71d0270b9b\">\n",
+       "  <clipPath id=\"pe6e87fd404\">\n",
        "   <rect x=\"50.14375\" y=\"7.2\" width=\"195.3\" height=\"138.6\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
