--- a/ch8 Attention/43.注意力评分函数.ipynb
+++ b/ch8 Attention/43.注意力评分函数.ipynb
@@ -132,6 +132,8 @@
     "\n",
     "其中可学习的参数包括$w_v^T$、$W_q$和$W_k$。\n",
     "\n",
+    "相当于把不同长度的query和key映射到一个超参数$h$的向量上。\n",
+    "\n",
     "将查询和键连结起来后输入到一个多层感知机（MLP）中， 感知机包含一个隐藏层，其隐藏单元数是一个超参数h。 通过使用`tanh`作为激活函数，并且禁用偏置项。"
    ]
   },
@@ -767,7 +769,9 @@
     "## 缩放点积注意力\n",
     "使用点积可以得到计算效率更高的评分函数， 但是点积操作要求查询和键具有相同的长度。\n",
     "\n",
-    "![Alt text](image-9.png)"
+    "![Alt text](image-9.png)\n",
+    "\n",
+    "缩放点积没有使用可学习的注意力参数。"
    ]
   },
   {
@@ -793,6 +797,13 @@
     "        scores = torch.bmm(queries, keys.transpose(1,2)) / math.sqrt(d)\n",
     "        self.attention_weights = masked_softmax(scores, valid_lens)\n",
     "        return torch.bmm(self.dropout(self.attention_weights), values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Alt text](image-10.png)"
    ]
   },
   {
